--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.2.1",
+    "date-fns": "^2.2.1",
     "firebase": "^6.6.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
